[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://backgrounds/main screen.png" type="Texture" id=2]
[ext_resource path="res://backgrounds/background.png" type="Texture" id=3]
[ext_resource path="res://fonts/fontHover.tres" type="StyleBox" id=4]
[ext_resource path="res://fonts/fontNormal.tres" type="StyleBox" id=5]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://backgrounds/Title.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 6 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="main screen" type="Sprite" parent="."]
position = Vector2( 590, 370 )
texture = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
visible = false
position = Vector2( 580, 280 )
texture = ExtResource( 3 )

[node name="settingsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_top = 510.0
margin_right = 692.0
margin_bottom = 570.0
rect_pivot_offset = Vector2( -507.121, -136.762 )
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 1
action_mode = 0
text = "SETTINGS"

[node name="newButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_top = 330.0
margin_right = 692.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( -608.588, -58.754 )
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 1
action_mode = 0
text = "NEW GAME"

[node name="loadButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_top = 420.0
margin_right = 692.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( -608.588, -58.754 )
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 1
action_mode = 0
text = "LOAD GAME"

[node name="exitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_top = 600.0
margin_right = 690.0
margin_bottom = 650.0
rect_pivot_offset = Vector2( -608.588, -58.754 )
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 1
action_mode = 0
text = "EXIT"

[node name="Title" type="Sprite" parent="."]
visible = false
position = Vector2( 630, 180 )
texture = ExtResource( 7 )
